[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xray-bot"
version = "0.1.0"
description = "XRay bot"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "gfx73" }]
dependencies = [
  "aiogram>=3.24.0",
  "aiofiles>=24.1.0",
  "aiohttp>=3.12.15",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "SQLAlchemy>=2.0.42",
  "pillow>=12.2.0",
  "qrcode>=8.2",
  "colorlog>=6.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[dependency-groups]
dev = [
  "ruff>=0.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PL",     # pylint (PLC, PLE, PLR, PLW)
    "PERF",   # perflint - performance anti-patterns
    "RUF",    # Ruff-specific rules
    "TCH",    # flake8-type-checking - TYPE_CHECKING blocks
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "RUF001",  # ambiguous unicode in strings (Russian text)
    "RUF002",  # ambiguous unicode in docstrings (Russian text)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
